// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UpgradeStatus /> when a manual update is scheduled should render 1`] = `
<Fragment>
  <div>
    <OutlinedArrowAltCircleUpIcon
      className="ocm-upgrade-available-icon"
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
     
    Update available
    <UpdateGraph
      currentVersion="1.2.3"
      hasMore={false}
      updateVersion="1.2.4"
    />
    <div
      className="ocm-upgrade-status-scheduled-title"
    >
      Upgrade scheduled
    </div>
    <DateFormat
      date={1606780800000}
      type="exact"
    />
  </div>
  <Button
    id="ocm-upgrade-status-cancel"
    onClick={[Function]}
    variant="link"
  >
    Cancel this upgrade
  </Button>
</Fragment>
`;

exports[`<UpgradeStatus /> when an automatic update is scheduled should not show upgrade time when the schedule is "pending" 1`] = `
<Fragment>
  <div>
    <OutlinedArrowAltCircleUpIcon
      className="ocm-upgrade-available-icon"
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
     
    Update available
    <UpdateGraph
      currentVersion="1.2.3"
      hasMore={false}
      updateVersion="1.2.4"
    />
  </div>
</Fragment>
`;

exports[`<UpgradeStatus /> when an automatic update is scheduled should render 1`] = `
<Fragment>
  <div>
    <OutlinedArrowAltCircleUpIcon
      className="ocm-upgrade-available-icon"
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
     
    Update available
    <UpdateGraph
      currentVersion="1.2.3"
      hasMore={false}
      updateVersion="1.2.4"
    />
    <div
      className="ocm-upgrade-status-scheduled-title"
    >
      Upgrade scheduled
    </div>
    <DateFormat
      date={1606780800000}
      type="exact"
    />
  </div>
</Fragment>
`;

exports[`<UpgradeStatus /> when an update is in progress should render 1`] = `
<Fragment>
  <div>
    <InProgressIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
     
    Update in progress
    <UpdateGraph
      currentVersion="1.2.3"
      hasMore={false}
      updateVersion="1.2.4"
    />
  </div>
</Fragment>
`;

exports[`<UpgradeStatus /> when cluster is up to date should render 1`] = `
<Fragment>
  <div>
    <CheckCircleIcon
      className="ocm-cluster-up-to-date-icon"
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
     
    Up to date
    <UpdateGraph
      currentVersion="1.2.3"
      hasMore={false}
    />
  </div>
</Fragment>
`;

exports[`<UpgradeStatus /> when updates are available should render 1`] = `
<Fragment>
  <div>
    <OutlinedArrowAltCircleUpIcon
      className="ocm-upgrade-available-icon"
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
     
    Update available
    <UpdateGraph
      currentVersion="1.2.3"
      hasMore={false}
      updateVersion="1.2.4"
    />
  </div>
</Fragment>
`;
